# drivebox

./: .coveragerc  .env.dist  .gitignore  .pre-commit-config.dist.yaml  .pre-commit-config.yaml  .secrets.baseline  README.md  auth.py  drivebox.spec  hotkeys.py  main.py  main.spec  notification.py  pyproject.toml  recording.py  region_selector.py  requirements-lock.txt  requirements.txt  screen_recorder.py  screenshot.py  screenshot_utils.py  settings.py  tox.ini  tray.py  upload.py  utils.py
.github/workflows/: build.yml  test.yml
drivebox/: app_state.py  auth.py  hotkeys.py  main.py  notification.py  notifications.py  recording.py  recording_worker.py  region_selector.py  screen_recorder.py  screenshot.py  screenshot_utils.py  screenshots.py  settings.py  tray.py  upload.py  utils.py
drivebox/services/: __init__.py  auth_service.py  settings_repository.py
drivebox/ui/: hotkeys_manager.py  options_hotkey_recorder.py  options_window.py
drivebox/ui/components/: __init__.py  auth_section.py  hotkey_row.py  hotkeys_section.py  log_table.py  permission_section.py
github/workflows/: build.yml
scripts/: download_ffmpeg.py  store_credentials.py
src/drivebox/: __main__.py  app.py  requirements.txt
src/drivebox/auth/: __init__.py  credential_loaders.py  exceptions.py  services.py  token_storage.py
src/drivebox/capture/: __init__.py  screen.py
src/drivebox/clipboard/: __init__.py  manager.py
src/drivebox/config/: __init__.py  constants.py  settings.py
src/drivebox/drive/: __init__.py  client.py
src/drivebox/hotkeys/: __init__.py  listener.py
src/drivebox/services/: __init__.py  screenshot_service.py
src/drivebox/storage/: __init__.py  file_service.py
src/drivebox/ui/tray/: tray_icon.py
src/drivebox/ui/windows/: main_window.py
src/drivebox/ui/windows/components/: __init__.py  _auth_controls.py
tests/: confest.py  conftest.py  test_auth.py  test_hotkeys.py  test_nofitications.py  test_recording.py  test_recording_worker.py  test_region_selector.py  test_screen_recorder.py  test_screenshot_utils.py  test_screenshots.py  test_settings.py  test_tray.py  test_upload.py
ui/: options_window.py
