[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drivebox"
version = "0.1.0"
description = "A screenshot and screen recording app with hotkeys and cloud upload"
authors = [{ name = "David Barkanyi", email = "dmbarkanyi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "PyQt5",
    "pynput",
    "pyperclip",
    "mss",
    "pillow",
    "notify-py",
    "pystray",
    "loguru",
    "requests",
    "google-api-python-client",
    "google-auth-oauthlib",
    "keyring"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "tox",
    "pre-commit",
    "black",
    "flake8",
    "isort"
]

[project.scripts]
drivebox = "drivebox.main:main"

[tool.setuptools]
packages = ["drivebox"]

[tool.setuptools.package-data]
"drivebox" = ["resources/*.png"]